Make sure line breaks in topic description are correctly rendered in HTML. bugid: 4038

--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -274,3 +274,8 @@ span.radio-span {
 	font-style: italic;
 	font-size: 80%;
 }
+
+p {
+	margin-top:0em;
+	margin-bottom:1em;
+}
